# leaders-2023-graph-recommendations

./: .dockerignore  .gitignore  CLAUDE.md  api.env.example  db.env.example  docker-compose.dev.yml  docker-compose.yml  readme.md
api/: pyproject.toml  requirements.txt
api/app/: main.py
api/app/core/: __init__.py  common.py  config.py
api/app/resource/activity/: model.py  schema.py
api/app/resource/questionnaire/: model.py  regions.py  schema.py
api/app/resource/recommendation/: model.py  schema.py
api/app/service/database/: __init__.py  client.py  convert.py  queries.py
api/app/service/importer/: model_city.py  model_event.py  model_excursion.py  model_hotel.py  model_place.py  model_region.py  model_restaurant.py  model_route.py  model_tour.py  model_track.py  service.py
api/app/service/rest/: __init__.py  api.py
api/app/service/rest/router/: __init__.py  activity.py  questionnaire.py  recommendation.py
api/dataset/: README.md  cities.json  events.json  excursions.json  hotels.json  places.json  regions.json  restaurants.json  routes.json  tours.json  tracks.json
api/docker/: Dockerfile
dataset/: events_description.txt  regions.txt
form-recommend/app/: package-lock.json  package.json
form-recommend/app/public/: index.html
form-recommend/app/src/: index.css  index.js  travel.css  travel.js
form/app/: package-lock.json  package.json
form/docker/: Dockerfile
load-test/: docker-compose.yaml  locustfile.py
neo4j/: password.txt.example  readme.md
tracker/: inject.js
traefik/app/: traefik.yml
traefik/docker/: Dockerfile
(+8 files in other folders)
