[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nikita Zotov <nikita.zotov@suncake.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
email-validator = "^2.0.0.post2"
bson = "^0.5.10"
neo4j = "^5.8.1"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
